2007-07-04  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncDialog.cs: Use new NoteArchvier.GetRenamedNoteXml method
	  in RenameNote.
	* Tomboy/Tomboy.cs: Safer XML loading and note creations using new
	  NoteArchiver methods.
	* Tomboy/Note.cs: Adding NoteArchiver.GetRenamedNoteXml and
	  NoteArchiver.GetTitleFromNoteXml.  In Note.LoadForeignNoteXml,
	  check that XML is parseable before processing.

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* configure.in: Bump to 0.7.1.5 since we released 0.7.1.4 as the
	  version we demo'd at the end of hack week.

2007-06-29  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncDialog.cs: Fixing typo in note renaming.

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/SyncDialog.cs: Fixed some spacing so the progressBar and
	  progressLabel hides and shows properly.

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/PreferencesDialog.cs: Delete ~/.tomboy/manifest.xml during
	  reset.  Give user feedback when saving sync preferences.
	* Tomboy/Addins/WebDavSyncService/WebDavSyncServiceAddin.cs: Return
	  true if already mounted.

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/SyncDialog.cs: Fixed the spacing in the dialog.  Also use
	  ellipses for all the progressLabel text.

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/SyncManager.cs: Make sure to set SyncState.Idle before
	  returning.  This will prevent a client from being in a broken state
	  where they can't fix.

2007-06-29  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncDialog.cs: Fix note rename glitch, some grammar.

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* configure.in: Bump the version to 0.7.1.3 since I used 0.7.1.2 to
	  build the demo for Hack Week.

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* configure.in: Changed the version to 0.7.1.2.  Since we haven't
	  released 0.7.2 officially, the previous one didn't make sense.
