@@ -1,3 +1,9 @@
+2007-07-07  Sandy Armstrong <sanfordarmstrong@gmail.com> 
+
+	* Tomboy/NoteManager.cs: Unless note is created using the "Link"
+	  button, select title when create new notes (instead of content). 
+	  Fixes bug #449478 (patch from Yonatan Oren).
+
 2007-07-04  Sandy Armstrong <sanfordarmstrong@gmail.com> 
 
 	* Tomboy/SyncDialog.cs: Use new NoteArchvier.GetRenamedNoteXml method
